more nba players html

--- a/index.html
+++ b/index.html
@@ -218,6 +218,91 @@
             </div>
           </div>
 
+          <div class="card">
+            <div class="front">
+              <img src="./img/players/kyle.png" alt="Kyle Kuzma">
+              <p>Kyle Kuzma</p>
+              <p>#0</p>
+              <hr>
+              <ul class="card-text text-left">
+                <li>Position: Forward</li>
+                <li>Height: 6ft 9in</li>
+                <li>Weight: 220lbs</li>
+              </ul>
+            </div>
+            <div class="back">
+              <canvas id="kyle"></canvas>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="./img/players/brook.png" alt="Brook Lopez">
+              <p>Brook Lopez</p>
+              <p>#11</p>
+              <hr>
+              <ul class="card-text text-left">
+                <li>Position: Center</li>
+                <li>Height: 7ft 0in</li>
+                <li>Weight: 268lbs</li>
+              </ul>
+            </div>
+            <div class="back">
+              <canvas id="brook"></canvas>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="./img/players/larry.png" alt="Larry Nance Jr.">
+              <p>Larry Nance Jr.</p>
+              <p>#11</p>
+              <hr>
+              <ul class="card-text text-left">
+                <li>Position: Forward</li>
+                <li>Height: 6ft 9in</li>
+                <li>Weight: 230lbs</li>
+              </ul>
+            </div>
+            <div class="back">
+              <canvas id="larry"></canvas>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="./img/players/julius.png" alt="Julius Randle">
+              <p>Julius Randle</p>
+              <p>#30</p>
+              <hr>
+              <ul class="card-text text-left">
+                <li>Position: Forward</li>
+                <li>Height: 6ft 9in</li>
+                <li>Weight: 250lbs</li>
+              </ul>
+            </div>
+            <div class="back">
+              <canvas id="julius"></canvas>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="./img/players/thomasR.png" alt="Thomas Robinson">
+              <p>Thomas Robinson</p>
+              <p>#15</p>
+              <hr>
+              <ul class="card-text text-left">
+                <li>Position: Forward</li>
+                <li>Height: 6ft 10in</li>
+                <li>Weight: 237lbs</li>
+              </ul>
+            </div>
+            <div class="back">
+              <canvas id="thomasR"></canvas>
+            </div>
+          </div>
+
 
         </div>
 
