added the rest of the players and changed some css

--- a/index.html
+++ b/index.html
@@ -303,6 +303,73 @@
             </div>
           </div>
 
+          <div class="card">
+            <div class="front">
+              <img src="./img/players/briante.png" alt="Briante Weber">
+              <p>Briante Weber</p>
+              <p>#NA</p>
+              <hr>
+              <ul class="card-text text-left">
+                <li>Position: Guard</li>
+                <li>Height: 6ft 2in</li>
+                <li>Weight: 165lbs</li>
+              </ul>
+            </div>
+            <div class="back">
+              <canvas id="briante"></canvas>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="./img/players/metta.png" alt="Metta World Peace">
+              <p>Metta World Peace</p>
+              <p>#37</p>
+              <hr>
+              <ul class="card-text text-left">
+                <li>Position: Forward</li>
+                <li>Height: 6ft 7in</li>
+                <li>Weight: 260lbs</li>
+              </ul>
+            </div>
+            <div class="back">
+              <canvas id="metta"></canvas>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="./img/players/stephen.png" alt="Stephen Zimmerman">
+              <p>Stephen Zimmerman</p>
+              <p>#NA</p>
+              <hr>
+              <ul class="card-text text-left">
+                <li>Position: Center</li>
+                <li>Height: 7ft 0in</li>
+                <li>Weight: 240lbs</li>
+              </ul>
+            </div>
+            <div class="back">
+              <canvas id="stephen"></canvas>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="./img/players/ivica.png" alt="Ivica Zubac">
+              <p>Ivica Zubac</p>
+              <p>#40</p>
+              <hr>
+              <ul class="card-text text-left">
+                <li>Position: Center</li>
+                <li>Height: 7ft 1in</li>
+                <li>Weight: 240lbs</li>
+              </ul>
+            </div>
+            <div class="back">
+              <canvas id="ivica"></canvas>
+            </div>
+          </div>
 
         </div>
 
@@ -311,6 +378,10 @@
 
     <footer class="text-muted">
       <div class="container">
+        <p class="float-left">Designed and Developed by:
+          <a href="http://www.vonettastevenson.com">VS</a>
+        </p>
+
         <p class="float-right">
           <a href="#">Back to top</a>
         </p>
