finished adding players and stats

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="kyle"></canvas>
+              <h1>Rookie</h1>
             </div>
           </div>
 
@@ -370,6 +370,7 @@
               <canvas id="ivica"></canvas>
             </div>
           </div>
+
 
         </div>
 
