changed size of charts and added a canvas background

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-
+    <canvas id="canvas"></canvas>
     <div class="collapse bg-dark" id="navbarHeader">
       <div class="container">
         <div class="row">
@@ -37,12 +37,13 @@
       </div>
     </div>
 
+
     <section class="banner">
       <img src="./img/banner/lakers.jpg" alt="">
     </section>
-
     <div class="album text-muted">
       <h1 class="text-center">Team Roster</h1>
+
       <div class="card-container">
 
         <div class="row">
@@ -78,7 +79,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="corey"></canvas>
+              <canvas width="400" height="500" id="corey"></canvas>
             </div>
           </div>
 
@@ -95,7 +96,7 @@
               </ul>
             </div>
             <div class="back">
-              <h1>Rookie</h1>
+              <h1 class="rookie">Rookie</h1>
             </div>
           </div>
 
@@ -112,7 +113,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="kentavious"></canvas>
+              <canvas width="400" height="500" id="kentavious"></canvas>
             </div>
           </div>
 
@@ -146,7 +147,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="jordan"></canvas>
+              <canvas width="400" height="500" id="jordan"></canvas>
             </div>
           </div>
 
@@ -163,7 +164,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="luol"></canvas>
+              <canvas width="400" height="500" id="luol"></canvas>
             </div>
           </div>
 
@@ -180,7 +181,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="tyler"></canvas>
+              <canvas width="400" height="500" id="tyler"></canvas>
             </div>
           </div>
 
@@ -214,7 +215,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="brandon"></canvas>
+              <canvas width="400" height="500" id="brandon"></canvas>
             </div>
           </div>
 
@@ -231,7 +232,7 @@
               </ul>
             </div>
             <div class="back">
-              <h1>Rookie</h1>
+              <h1 class="rookie">Rookie</h1>
             </div>
           </div>
 
@@ -248,7 +249,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="brook"></canvas>
+              <canvas width="400" height="500" id="brook"></canvas>
             </div>
           </div>
 
@@ -265,7 +266,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="larry"></canvas>
+              <canvas width="400" height="500" id="larry"></canvas>
             </div>
           </div>
 
@@ -282,7 +283,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="julius"></canvas>
+              <canvas width="400" height="500" id="julius"></canvas>
             </div>
           </div>
 
@@ -299,7 +300,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="thomasR"></canvas>
+              <canvas width="400" height="500" id="thomasR"></canvas>
             </div>
           </div>
 
@@ -316,7 +317,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="briante"></canvas>
+              <canvas width="400" height="500" id="briante"></canvas>
             </div>
           </div>
 
@@ -333,7 +334,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="metta"></canvas>
+              <canvas width="400" height="500" id="metta"></canvas>
             </div>
           </div>
 
@@ -350,7 +351,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="stephen"></canvas>
+              <canvas width="400" height="500" id="stephen"></canvas>
             </div>
           </div>
 
@@ -367,7 +368,7 @@
               </ul>
             </div>
             <div class="back">
-              <canvas id="ivica"></canvas>
+              <canvas width="400" height="500" id="ivica"></canvas>
             </div>
           </div>
 
