--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <div class="row">
           <div class="col-sm-8 py-4">
             <h4 class="text-white">About</h4>
-            <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+            <p class="text-muted">The Lakers hold the record for NBA's longest winning streak, 33 straight games, set during the 1971–72 season. 21 Hall of Famers have played for Los Angeles, while four have coached the team. Four Lakers—Abdul-Jabbar, Johnson, O'Neal, and
+              Bryant—have won the NBA MVP Award for a total of eight awards.</p>
           </div>
         </div>
       </div>
